# backend/app/schemas.py
@@ -1,6 +1,6 @@
 from datetime import date, datetime
 
-from pydantic import BaseModel, ConfigDict, Field, field_validator
+from pydantic import BaseModel, ConfigDict, Field, PositiveInt, field_validator
 
 
 class Credentials(BaseModel):
@@ -19,6 +19,7 @@ class Credentials(BaseModel):
 class TokenResponse(BaseModel):
     access_token: str
     token_type: str = "bearer"
+    expires_in: PositiveInt
 
 
 class UserProfile(BaseModel):
